src/test/deca/context/invalid/testAndWrongTypes.deca
// Description : and avec mauvais type
{
    int x = 2;
    boolean y = false;
    boolean z = x && y;
}
